--- a/src/routes/design/temp.html
+++ b/src/routes/design/temp.html
@@ -1,6 +1,37 @@
-"
-<meta data-width=\"600\" data-height=\"600\">\n<div class=\"relative w-full h-full overflow-hidden bg-gradient-to-br from-green-200 to-green-400\">\n <div class=\"absolute top-0 right-0 w-40 h-40 bg-green-500 rounded-full opacity-20 -mt-20 -mr-20 z-0\"></div>\n <div class=\"absolute bottom-0 left-0 w-48 h-48 bg-green-600 rounded-full opacity-15 -mb-24 -ml-16
-                                                                                                                                                                                                                                                                                                                                                                            z-0\">
-    </div>\n <img src=\"https://upload.wikimedia.org/wikipedia/commons/2/2c/Frog_silhouette.png\" alt=\"\" class=\"absolute bottom-0 left-0 w-2/5 opacity-30 z-10 -mb-4 -ml-4\">\n <h1 class=\"absolute top-8 left-8 text-white font-bold text-4xl z-20\">Introduction to Frogs</h1>\n <h2 class=\"absolute top-20 left-8 text-white/90 text-xl z-20\">An Overview for
-        Biology Students</h2>\n <ul class=\"absolute top-32 right-8 list-disc text-white text-lg space-y-2 z-20\">\n <li>Taxonomy &amp; Classification</li>\n <li>Anatomy &amp; Physiology</li>\n <li>Life Cycle</li>\n <li>Habitats &amp; Distribution</li>\n <li>Ecological Importance</li>\n </ul>\n <div class=\"absolute bottom-0 w-full h-16 bg-green-700 z-20\">
-    </div>\n <span class=\"absolute bottom-4 inset-x-0 text-center text-white font-semibold text-sm z-30\">BIOL 101</span>\n</div>"
+<meta data-width="800" data-height="800">
+<div class="relative w-full h-full">
+    <div class="absolute inset-0 bg-[#F5EDE2]"></div>
+    <div class="absolute inset-0 bg-[#8B5A2B] opacity-10"></div>
+    <div class="absolute left-[100px] top-[100px] w-[600px] h-[600px] bg-white bg-opacity-80 rounded-[20px] shadow-[0_4px_10px_rgba(0,0,0,0.2)] relative">
+        <span data-font-family="Playfair Display" class="absolute left-1/2 top-[80px] -translate-x-1/2 text-[72px] text-[#E25822] font-bold">Summer BBQ Bash</span>
+        <span data-font-family="Open Sans" class="absolute left-1/2 top-[160px] -translate-x-1/2 text-[28px] text-[#333333] font-semibold">Next Sat • July 15 • 4 PM</span>
+        <span data-font-family="Open Sans" class="absolute left-1/2 top-[210px] -translate-x-1/2 text-[24px] text-[#333333]">Your Backyard • Bring Your Own Beverage</span>
+        <img data-prompt="flat style vector grill icon in charcoal color" data-remove-bg="false" class="absolute left-[360px] top-[480px] w-[80px] h-[60px]" />
+    </div>
+    <div class="absolute left-[50px] top-[30px] w-[700px] h-[2px] bg-[#8B5A2B]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#FFCC00] left-[50px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#FF5733] left-[130px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#C70039] left-[210px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#FFCC00] left-[290px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#FF5733] left-[370px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#C70039] left-[450px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#FFCC00] left-[530px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#FF5733] left-[610px] top-[24px]"></div>
+    <div class="absolute w-[12px] h-[12px] rounded-full bg-[#C70039] left-[690px] top-[24px]"></div>
+    <div class="absolute w-[150px] h-[150px] bg-white shadow-[0_2px_6px_rgba(0,0,0,0.15)] transform rotate-[-12deg] left-[-15px] top-[20px]">
+        <img data-prompt="grill on fire barbecue grill" data-remove-bg="true" class="absolute top-[15px] left-[15px] w-[120px] h-[120px] object-cover" />
+        <div class="absolute w-[20px] h-[8px] bg-[#D3A85E] top-[-4px] left-1/2 -translate-x-1/2 transform rotate-[-12deg]"></div>
+    </div>
+    <div class="absolute w-[150px] h-[150px] bg-white shadow-[0_2px_6px_rgba(0,0,0,0.15)] transform rotate-[8deg] left-[665px] top-[30px]">
+        <img data-prompt="skewers barbecue skewers with vegetables" data-remove-bg="true" class="absolute top-[15px] left-[15px] w-[120px] h-[120px] object-cover" />
+        <div class="absolute w-[20px] h-[8px] bg-[#D3A85E] top-[-4px] left-1/2 -translate-x-1/2 transform rotate-[8deg]"></div>
+    </div>
+    <div class="absolute w-[150px] h-[150px] bg-white shadow-[0_2px_6px_rgba(0,0,0,0.15)] transform rotate-[6deg] left-[20px] top-[655px]">
+        <img data-prompt="cold refreshing drinks in glasses" data-remove-bg="true" class="absolute top-[15px] left-[15px] w-[120px] h-[120px] object-cover" />
+        <div class="absolute w-[20px] h-[8px] bg-[#D3A85E] top-[-4px] left-1/2 -translate-x-1/2 transform rotate-[6deg]"></div>
+    </div>
+    <div class="absolute w-[150px] h-[150px] bg-white shadow-[0_2px_6px_rgba(0,0,0,0.15)] transform rotate-[-8deg] left-[665px] top-[645px]">
+        <img data-prompt="friends laughing at a barbecue party" data-remove-bg="true" class="absolute top-[15px] left-[15px] w-[120px] h-[120px] object-cover" />
+        <div class="absolute w-[20px] h-[8px] bg-[#D3A85E] top-[-4px] left-1/2 -translate-x-1/2 transform rotate-[-8deg]"></div>
+    </div>
+</div>
